# MAI_study

./: README.md  ~$_report.docx  ~WRL0241.tmp
Artificial_Intelligence/lab1/: Readme.md
Artificial_Intelligence/lab2/: Readme.md  Report.md
Artificial_Intelligence/lab3/: Readme.md  Solution.ipynb  Solution_MyFramework.ipynb
Artificial_Intelligence/lab4/: Readme.md  Solution.ipynb
Computer_Graphics/Coursework_(CP)/: CMakeLists.txt  ShaderLoader.h  Surface.cpp  Surface.h  main.cpp
Computer_Graphics/Coursework_(CP)/curves/: Bezier.cpp  Bezier.h
Computer_Graphics/Coursework_(CP)/figures/: Cube.cpp  Cube.h
Computer_Graphics/Coursework_(CP)/math/: math.cpp  math.h
Computer_Graphics/Coursework_(CP)/shaders/: light_cube.frag  surface.frag  surface.vert
Computer_Graphics/lab1_final/: cg_1.pro  functionapproximizer.cpp  functionapproximizer.h  graphicwidget.cpp  graphicwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h  paramhandler.cpp  paramhandler.h  transformer.cpp  transformer.h  transformer.h.autosave
Computer_Graphics/lab2_final/: cg_2.pro  figure.cpp  figure.h  graphicwidget.cpp  graphicwidget.h  invisibledeleter.cpp  invisibledeleter.h  main.cpp  mainwindow.cpp  mainwindow.ui  matrix.cpp.autosave  matrix.h.autosave  paramhandler.cpp  paramhandler.h  projecter.cpp  projecter.h  pyramid.cpp  pyramid.h  rasterizer.cpp  rasterizer.h  square.cpp  square.h  tetrahedron.cpp  tetrahedron.h  (+2 more)
DataBases/: DB_Coursework_(CP).docx  DB_Lab.docx
Economics/: Economy_essay.pptx
Operations_Research_(IO)/: Presentation_coalition_game.pptx
(+203 files in other folders)
